--- a/Init/Init_Desktop/MainWindow.xaml
+++ b/Init/Init_Desktop/MainWindow.xaml
@@ -5,8 +5,48 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Init_Desktop"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Init" Height="550" Width="1000" ResizeMode="CanMinimize" WindowStyle="None" AllowsTransparency="True">
+    
+    <WindowChrome.WindowChrome>
+        <WindowChrome CaptionHeight="35" />
+    </WindowChrome.WindowChrome>
+    
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="35" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="auto" />
+        </Grid.RowDefinitions>
+
+        <Grid WindowChrome.IsHitTestVisibleInChrome="True" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2">
+            <Image Source="" HorizontalAlignment="Left"/>
+
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                <Button x:Name="minimizeButton" Style="{StaticResource headerButton}" Click="minimizeButton_Click" Width="50">-</Button>
+                <Button x:Name="exitButton" Style="{StaticResource headerButton}" Click="exitButton_Click" Width="50">x</Button>
+            </StackPanel>
+        </Grid>
         
+        <ScrollViewer Grid.Column="0" Grid.Row="1">
+            <ListView SelectionChanged="templatesListView_SelectionChanged" SelectionMode="Single" x:Name="templatesListView">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel>
+                            <TextBlock Text="{Binding name}" FontFamily="Consolas"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </ScrollViewer>
+        <Button x:Name="newTemplateButton" Click="newTemplateButton_Click" Content="New Template" FontFamily="Consolas" Grid.Column="0" Grid.Row="2" FontSize="14" MinWidth="200" MinHeight="30"></Button>
+
+        <ContentControl x:Name="centerControl" Grid.Column="1" Grid.Row="1" Grid.RowSpan="2">
+            <TextBlock Text="Welcome to Init!" FontSize="36" FontFamily="Consolas" FontWeight="Bold" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+        </ContentControl>
     </Grid>
 </Window>
