--- a/Init/Init_Desktop/Views/NewTemplateControl.xaml
+++ b/Init/Init_Desktop/Views/NewTemplateControl.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Init_Desktop.Views"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -15,12 +16,9 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Label Grid.Row="0" Content="Make a new Template"/>
+        <TextBlock Grid.Row="0" HorizontalAlignment="Center" Text="Make a new Template" FontSize="20" Margin="0,20,0,0" />
         <StackPanel Grid.Row="1" Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <StackPanel Orientation="Horizontal">
-                <Label Content="Name:"/>
-                <TextBox x:Name="templateNameInput" VerticalContentAlignment="Center" MinWidth="250"/>
-            </StackPanel>
+            <TextBox x:Name="templateNameInput" Style="{DynamicResource MaterialDesignOutlinedTextFieldTextBox}" materialDesign:HintAssist.Hint="Enter a name for this template" VerticalContentAlignment="Center" MinWidth="250" Margin="0,0,0,20"/>
             <Button x:Name="submitButton" Click="submitButton_Click" Content="Submit" MinHeight="40"/>
         </StackPanel>
     </Grid>
